small amendments
