# static/openapi.yaml
@@ -5,6 +5,7 @@ info:
   version: 1.0.0
 servers:
   - url: https://ncts5.monnier.cloud
+  - url: http://localhost:8080
 tags:
 - name : CC007C messages
   description : arrival advice from the trader
@@ -36,7 +37,7 @@ paths:
           schema:
             type: string
             example: "1"
-        - name: authorisationID
+        - name: authorisationID_C520
           in: query
           required: true
           schema:
@@ -61,11 +62,13 @@ paths:
           required: true
           schema:
             type: string
+            example: "B"
         - name: qualifierID
           in: query
           required: true
           schema:
             type: string
+            example: "Y"
         - name: locationID
           in: query
           required: true
@@ -101,7 +104,13 @@ paths:
           required: true
           schema:
             type: string
-        - name: authorisationID
+            example: "1"
+        - name: authorisationID_C520
+          in: query
+          required: true
+          schema:
+            type: string
+        - name: authorisationID_C522
           in: query
           required: true
           schema:
@@ -126,11 +135,13 @@ paths:
           required: true
           schema:
             type: string
+            example: "B"
         - name: qualifierID
           in: query
           required: true
           schema:
             type: string
+            example: "Y"
         - name: locationID
           in: query
           required: true
